tests/transpiler/x/fs/group_by_multi_join_sort.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(97,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (96:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(97,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (96:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(98,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (96:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(98,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (96:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(98,13): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (96:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(98,13): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (96:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(98,25): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (96:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(98,25): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (96:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(96,101): error FS0764: No assignment given for field 'revenue' of type 'Group_by_multi_join_sort.Anon13'

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(96,56): error FS0747: This construct may only be used within list, array and sequence expressions, e.g. expressions of the form 'seq { ... }', '[ ... ]' or '[| ... |]'. These use the syntax 'for ... in ... do ... yield...' to generate elements

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(96,56): warning FS0020: This expression should have type 'unit', but has type 'Anon11'. Use 'ignore' to discard the result of the expression, or 'let' to bind the result to a name.

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(97,30): error FS0001: This expression was expected to have type
    Anon9    
but here has type
    Anon13    

/workspace/mochi/tests/transpiler/x/fs/group_by_multi_join_sort.fs(98,142): error FS0001: The type 'float' does not match the type 'int'
